<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_PumpDirection" Id="{a556ad3c-fe9f-4940-b837-860b3779556c}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_PumpDirection :
(
	None := 0,
    Forward := 1,
    Backward := 2
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>