<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_PumpPath" Id="{803e10ce-3bc7-4ac6-891e-e576042e6c97}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_PumpPath :
(
    FillJars   := 0, 	// From solvent bottles to jars
    FillCalBox := 1, 	// From jars to calibration box
    FromCalBox := 2 	// From calibration box to the jars
) UDINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>